fixed overflow on mobile and minimized initial load visual noise

--- a/src/StyleSheets/Cube.css
+++ b/src/StyleSheets/Cube.css
@@ -6,7 +6,7 @@
     margin: auto;
     /* margin-top: calc(62vh - (15vw)); */
     /* z-index: 1; */
-    margin-top: 1400px
+    margin-top: 1400px;
   }
 
   .slide_up {
